<resources>
    <string name="app_name">Fake Armut</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="price">Price:</string>
    <string name="request_calendar">Request calendar</string>
    <string name="price_settings">Filter</string>
    <string name="city">City</string>
    <string name="available_days">Schedule:</string>
    <string name="textview_username">TextView</string>
    <string name="textview_job">TextView</string>
    <string name="textview_price">TextView</string>
    <string name="pzt">pzt</string>
    <string name="sal">sal</string>
    <string name="imaj">imaj</string>
    <string name="todo">TODO</string>
    <string name="pers">pers</string>
    <string name="car">car</string>
    <string name="cuma">cuma</string>
    <string name="paz">paz</string>
    <string name="cmt">cmt</string>
    <string name="req">Request Calendar</string>
    <string name="req_button_mon">Request Monday</string>
    <string name="req_button_tue">Request Tuesday</string>
    <string name="req_button_wed">Request Wednesday</string>
    <string name="req_button_thu">Request Thursday</string>
    <string name="req_button_fri">Request Friday</string>
    <string name="req_button_sat">Request Saturday</string>
    <string name="req_button_sun">Request Sunday</string>
    <string name="calendar_request_activity">Requests</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="tv_req">TextView</string>
    <string name="tv_detail_req">TextView</string>
    <string name="btn_req_accept">Send</string>
    <string name="btn_req_decline">Cancel</string>
    <string name="title_activity_list_of_requests">ListOfRequestsActivity</string>
    <string name="requests_header">You do not have any requests!</string>
    <string name="requests_question">Question</string>
    <string name="requests_q_accept">ReqQAccept</string>
    <string name="requests_q_decline">ReqQDecline</string>
    <string name="allowed_calendars">Calendars</string>
    <string name="req_button_goback">Back</string>
    <string name="api_url">https://599api-ptbwhoiylf.now.sh</string>
    <string name="title_activity_list_of_day_requests">ListOfDayRequestsActivity</string>
    <string name="day_calendar_request_activity">Day Requests</string>
</resources>
