<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ListOfDayRequestsActivity"
    tools:showIn="@layout/activity_list_of_day_requests">
    <TextView
        android:id="@+id/day_requests_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requests_header"
        android:textSize="40sp"
        android:gravity="center"
        android:paddingBottom="30sp"
        android:textColor="@color/design_default_color_primary"/>

    <TextView
        android:id="@+id/day_requests_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30sp"
        android:text="@string/requests_question"
        android:textSize="18sp" />

    <Button
        android:id="@+id/day_requests_q_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:text="@string/requests_q_accept"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/day_requests_q_decline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="@android:color/holo_red_light"
        android:text="@string/requests_q_decline"
        android:textColor="@color/colorWhite" />
</LinearLayout>