<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="8"
        android:orientation="vertical"
        android:padding="16dp"
        android:rowCount="8"
        android:visibility="visible">

        <ImageView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_margin="5dp"
            android:contentDescription="TODO"
            android:fontFamily="sans-serif"
            android:src="@drawable/ppfbphoto"
            android:text="imaj"></ImageView>

        <TextView
            android:id="@+id/tv_single_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"

            />

        <TextView
            android:id="@+id/tv_single_item_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"

            />

        <TextView
            android:id="@+id/tv_single_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/price"

            />

        <TextView
            android:id="@+id/tv_single_item_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/city"

            />

        <TextView
            android:id="@+id/tv_single_item_available_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="5"
            android:layout_margin="5dp"
            android:text="@string/available_days" />

        <Button
            android:id="@+id/button_detail_calendar_mon"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="pzt"
            android:textColor="@color/colorWhite"
            />

        <Button
            android:id="@+id/button_detail_calendar_tue"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="sal"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_detail_calendar_wed"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="car"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_detail_calendar_thur"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="pers"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_detail_calendar_fri"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="cuma"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_detail_calendar_sat"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="cmt"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_detail_calendar_sun"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="paz"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/button_detail_calendar_req"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:text="REQ"
            android:textColor="@color/colorWhite" />
    </GridLayout>
</android.support.v7.widget.CardView>